Criaçao da Categoria(Model, DTO, Service, Controller e Repository)